# bloqade-python-examples

./: .gitignore  .mock_state.txt  fetch.py  mkdocs.yml  pyproject.toml  test.py  transform.py  versions.json
.github/workflows/: deploy.yml  doc.yml
0.13.0/: 404.html  index.html  sitemap.xml
0.13.0/examples/example-1-floquet/: index.html
0.13.0/search/: search_index.json
0.15.10/: 404.html  index.html  sitemap.xml
0.15.11/: 404.html  index.html  sitemap.xml
0.15.11/search/: search_index.json
0.15.12/: 404.html  index.html  sitemap.xml
0.15.12/search/: search_index.json
0.15.13/: 404.html  index.html  sitemap.xml
0.15.13/reference/: SUMMARY.txt
0.15.13/search/: search_index.json
0.15.14/: 404.html  index.html  sitemap.xml
0.15.5/: 404.html  index.html  sitemap.xml
0.15.5/search/: search_index.json
0.15.7/: 404.html  index.html  sitemap.xml
0.15.9/: 404.html  index.html  index.md  sitemap.xml
0.15.9/search/: search_index.json
0.7.2/: 404.html  index.html  sitemap.xml
0.7.2/search/: search_index.json
0.9.0/: 404.html  index.html  index.md  sitemap.xml
0.9.0/search/: search_index.json
data/: MIS-UDG-job.json  floquet-job.json  lgt-emulation.json  lgt-job.json  lp-gate-1-atom-job.json  lp-gate-2-atom-job.json  multi-qubit-blockaded-job.json  nonequilibrium-dynamics-blockade-job.json  quantum-scar-dynamics-job.json  rabi-job.json  ramsey-job.json  time-sweep-job.json  two-qubit-adiabatic.json
data/old/: ramsey-job.json.old  two-qubit-adiabatic.json
docs/: index.md  mkdocs.yml  mkdocs_old.yml
docs/docs/: index.md
docs/examples/: adiabatic.py  example-1-floquet.py  example-1-rabi.py  example-1-ramsey.py  example-2-lp-gate.py  example-2-multi-qubit-blockaded.py  example-2-nonequilibrium-dynamics-blockade-radius.py  example-2-two-qubit-adiabatic.py  example-3-2d-ordered-state-job.json  example-3-2d-ordered-state.py  example-3-time-sweep-job.json  example-3-time-sweep.py  example-4-quantum-scar-dynamics.py  example-5-MIS-UDG.py  example-6-lattice-gauge-theory.py  floquet-job.json  floquet.py  multi-qubit-blockaded-rabi.py  rabi.py  ramsey.py
docs/stylesheets/: neoteroi-cards.css
latest/: 404.html  index.html  index.md  sitemap.xml
latest/search/: search_index.json
pr-preview/pr-70/: 404.html  index.html  sitemap.xml
pr-preview/pr-73/: 404.html  index.html  objects.inv  sitemap.xml
unfinished_examples/: IEEE Demo.ipynb  Z2 Variational Optimizer.ipynb  adiabatic.py  blockaded_batch_demo.json  example-2-lp-gate.py  example-3-2d-ordered-state.py  example-3-time-sweep.py  example-4-quantum-scar-dynamics.py  example-5-MIS-UDG.py  multi-qubit-blockaded-rabi.py  single_run_demo.json
(+221 files in other folders)
