[project]
name = "bloqade-python-examples"
version = "0.1.0"
description = "Example notebooks for bloqade-python"
authors = [
    {name = "QuEra Computing Inc.", email = "info@quera.com"},
]
dependencies = [
    "mkdocs>=1.5.1",
    "mkdocs-material>=9.1.21",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-jupyter>=0.24.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mike>=1.1.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

