[project]
name = ""
version = ""
description = ""
authors = [
    {name = "QuEra Computing Inc.", email = "info@quera.com"},
]
dependencies = [
    "mkdocs>=1.5.1",
    "mkdocs-material>=9.1.21",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-jupyter>=0.24.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mike>=1.1.2",
    "bloqade>=0.3.1",
    "numpy>=1.25.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.black]
line-length = 88

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.10.
target-version = "py310"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "twine>=4.0.2",
    "ipython>=8.12.0",
    "black>=23.3.0",
    "pytest>=7.3.1",
    "mypy>=1.2.0",
    "ipykernel>=6.22.0",
    "jupyter>=1.0.0",
    "ruff>=0.0.264",
    "pre-commit>=3.3.1",
    "coverage>=7.2.5",
    "jupytext>=1.14.5",
    "pytest-recording>=0.12.2",
    "vcrpy==4.4.0",
]

[tool.pdm.scripts]
_.env_file = "./.env"
upload = "python -m twine upload -r bloqade dist/*"
build = {cmd = "pdm build"}
publish = {composite = ["build", "upload"]}
test = {shell = "git clean -f && pytest tests docs/examples/*.py"}
coverage = {shell = "git clean -f && coverage run -m pytest tests/ docs/examples/*.py && coverage report"}
coverage-html = {shell = "git clean -f && coverage run -m pytest tests/ docs/examples/*.py && coverage html"}
doc = {cmd = "mkdocs serve -f docs/mkdocs.yml"}
doc_build = {cmd = "mkdocs build"}
doc_deploy = {cmd = "pdm mike deploy --push --update-aliases dev"}
jupytext = {cmd = "jupytext --sync docs/examples/*.py"}

[tool.jupytext]
formats = "ipynb,py:percent"
hide_notebook_metadata = false
